; ModuleID = '/home/carl/AnghaBench/linux/drivers/xen/events/extr_events_base.c_unbind_from_irqhandler.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/xen/events/extr_events_base.c_unbind_from_irqhandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_info = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @unbind_from_irqhandler(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.irq_info*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.irq_info* @irq_get_handler_data(i32 %6)
  store %struct.irq_info* %7, %struct.irq_info** %5, align 8
  %8 = load %struct.irq_info*, %struct.irq_info** %5, align 8
  %9 = icmp ne %struct.irq_info* %8, null
  %10 = xor i1 %9, true
  %11 = zext i1 %10 to i32
  %12 = call i64 @WARN_ON(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  br label %21

15:                                               ; preds = %2
  %16 = load i32, i32* %3, align 4
  %17 = load i8*, i8** %4, align 8
  %18 = call i32 @free_irq(i32 %16, i8* %17)
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @unbind_from_irq(i32 %19)
  br label %21

21:                                               ; preds = %15, %14
  ret void
}

declare dso_local %struct.irq_info* @irq_get_handler_data(i32) #1

declare dso_local i64 @WARN_ON(i32) #1

declare dso_local i32 @free_irq(i32, i8*) #1

declare dso_local i32 @unbind_from_irq(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
